kubernetes/_letsencrypt/nginx-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
  - protocol: "TCP"
    port: 80
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx
    labels:
      app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-configs
          mountPath: /etc/nginx/conf.d/
          # HTTP Health Check
        livenessProbe:
          httpGet:
            path: /
            port: 80
      # Load the configuration files for nginx
      volumes:
        - name: nginx-configs
          configMap:
            name: nginx-config
