kubernetes/_letsencrypt/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    last_updated: "1494099933"
spec:
#   tls:
#     - secretName: 192-168-64-12-nip-io-tls
#       hosts:
#         - '*.192.168.64.12.nip.io'
  tls:
    - hosts:
      - '*.192.168.64.12.nip.io' # Your host. CHANGE ME
      secretName: letsencrypt-certs
  rules:
  - host: nginx.192.168.64.12.nip.io
    http:
      paths:
        - backend:
            serviceName: nginx
            servicePort: 80

# https://vocon-it.com/2018/12/31/kubernetes-6-https-applications-via-ingress-controller-on-minikube/
# export DOMAIN=$(minikube ip).nip.io
# openssl req -x509 -newkey rsa:4096 -sha256 -nodes -keyout ~/tls_self.key -out ~/tls_self.crt -subj "/CN=*.${DOMAIN}" -days 365
# SECRET_NAME=$(echo $DOMAIN | sed 's/\./-/g')-tls; echo $SECRET_NAME
# kubectl create secret tls $SECRET_NAME --cert=~/tls_self.crt --key=~/tls_self.key
